# slop-eval

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml  publish.yml
action/: README.md  action.yml
python/: .gitignore  README.md  pyproject.toml
python/docs/: concepts.md  getting-started.md
python/docs/integrations/: ci.md
python/examples/: README.md
python/examples/01-basic-score/: score.py
python/examples/02-ci-gate/: gate.py
python/examples/03-agent-native-json/: agent_report.py
python/src/slop_eval/: __init__.py  cache.py  cli.py  errors.py  report.py  scorer.py
python/src/slop_eval/sources/: __init__.py  base.py  llm_judge.py  screenshot_diff.py
python/tests/: conftest.py  test_cache.py  test_cli.py  test_llm_judge_source.py  test_report.py  test_scorer.py  test_screenshot_diff.py
src/: cli.ts
src/cache/: judge-cache.ts
src/report/: writer.ts
src/rubric/: v1.json
src/scorer/: composite.ts
src/sources/: LLMJudgeSource.ts  RuleSource.ts  ScreenshotDiffSource.ts
test/: cli.test.ts  composite.test.ts  judge-cache.test.ts  llm-judge-source.test.ts  report-writer.test.ts  screenshot-diff-source.test.ts
